--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,13 @@
-alabaster==0.7.12
-allennlp==0.8.4
-ansicolors==1.1.8
-attrs==19.3.0
-awscli==1.18.123
-Babel==2.8.0
-blis==0.2.4
-boto3==1.14.43
-botocore==1.17.46
-bsddb3==6.2.7
-catalogue==1.0.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-conllu==0.11
-cycler==0.10.0
-cymem==2.0.3
-dataclasses==0.7
-docutils==0.15.2
-editdistance==0.5.3
-filelock==3.0.12
-fire==0.2.1
-flaky==3.7.0
-Flask==1.1.2
-Flask-Cors==3.0.8
-ftfy==5.8
-future==0.18.2
-gevent==20.6.2
-googletrans==2.4.0
-greenlet==0.4.16
-h5py==2.10.0
-idna==2.10
-imagesize==1.2.0
-importlib-metadata==1.7.0
-iniconfig==1.0.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jmespath==0.10.0
-joblib==0.16.0
-jsonnet==0.16.0
-jsonpickle==1.4.1
-kiwisolver==1.2.0
-MarkupSafe==1.1.1
-matplotlib==3.3.1
-more-itertools==8.4.0
-msgpack==1.0.0
-msgpack-numpy==0.4.6.1
-murmurhash==1.0.2
-nltk==3.5
-numpy==1.18.5
-numpydoc==1.1.0
-overrides==3.0.0
-packaging==20.4
-pandas==1.0.5
-parsimonious==0.8.1
-Pillow==7.2.0
-plac==0.9.6
-pluggy==0.13.1
-preshed==2.0.1
-protobuf==3.13.0
-py==1.9.0
-py-rouge==1.1
-pyasn1==0.4.8
-Pygments==2.6.1
-pyparsing==2.4.7
-pytest==6.0.1
-python-dateutil==2.8.1
-pytorch-pretrained-bert==0.6.2
-pytorch-transformers==1.1.0
-pytz==2020.1
-PyYAML==5.3.1
-regex==2020.7.14
-requests==2.24.0
-responses==0.10.16
-rsa==4.5
-s3transfer==0.3.3
-sacremoses==0.0.43
-scikit-learn==0.22.2
-scipy==1.5.2
-sentencepiece==0.1.91
-six==1.15.0
-sklearn==0.0
-snowballstemmer==2.0.0
-spacy==2.1.9
-Sphinx==3.2.1
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sqlparse==0.3.1
-srsly==1.0.2
-tensorboardX==2.1
-termcolor==1.1.0
-thinc==7.0.8
-threadpoolctl==2.1.0
-tokenizers==0.7.0
-toml==0.10.1
-torch==1.6.0
-tqdm==4.43.0
-transformers==2.11.0
-Unidecode==1.1.1
-urllib3==1.25.10
-wasabi==0.7.1
-wcwidth==0.2.5
-Werkzeug==1.0.1
-word2number==1.1
-zipp==3.1.0
-zope.event==4.4
-zope.interface==5.1.0
+torch>=1.0.0
+h5py
+tqdm~=4.43.0
+numpy~=1.18.4
+allennlp>=0.8.4
+pandas~=1.0.4
+msgpack~=1.0.0
+msgpack-numpy
+bsddb3~=6.2.7
+spacy>=2.0.0
+ansicolors
+transformers~=2.5.1
+fire~=0.2.1
